# lab_prisma_rust

./: .gitignore  Cargo.toml
prisma/: schema.prisma
prisma_cli/: Cargo.toml
src/: main.rs
