[package]
name = "lab_prisma_rust"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2" # Needed for prisma to work if this becomes a virtual workspace.
members = ["prisma_cli"]

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4" }
serde = "1.0.152"
